2005-04-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/MinGW-3.4:
  - New, thanks Alankar Karol
  - Like gcc-3.3, but without sleep() and <sys/select.h>
 win32/INSTALL.txt:
  - No longer mentions config-public-libpq.h, thanks Alankar Karol
2005-04-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Makefile.am:
  - Factored out duplicated conditional re-creation of html directory
  - Tutorial included in distribution archive again
2005-04-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease:
  - New variable: CONFIGDIST_ARGS (for "./configure" prior to "make dist")
  - Use maintainer mode for make dist so docs are built, thanks Steve Butler
2005-04-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Fixed help string for --disable-thread-safety, thanks Patrick Welche
2005-04-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test085:
  - Fixed typo in output.
2005-03-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/VisualC++.NET-2003/config-internal-compiler.h:
  - Added PQXX_HAVE_QUIET_NAN, thanks Marvin Bellamy!
2005-03-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Perform strerror_r() tests in C++, thanks Christopher Barkley
 include/pqxx/result.hxx:
  - Added warning about thread safety of results
  - Added note about lightweight copying of results
 include/pqxx/tablewriter.hxx, src/dbtransaction.cxx, src/util.cxx:
  - Made it a little easier for Doxygen to resolve certain functions
 include/pqxx/transactor.hxx:
  - Always call the new abort/doubt/commit handlers!
2005-03-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
  - Work around displacement overflow in backend, thanks Christopher Barkley
  - Added stridestring() to generate proper SQL string for given offset
2005-03-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Fixed Oid type check, thanks Manuel Fernandez Montecelo.
2005-03-19  Jeroen T. Vermeulen <jtv@xs4all.nl>